# livespec-console-beads-fabro

./: .gitignore  .livespec.jsonc  .mise.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  lefthook.yml  pyproject.toml  release-please-config.json
.ai/: fleet-repo-naming.md  livespec-plugin-currency.md  spec-check-and-ci-discipline.md
.beads/: .gitignore  config.yaml
.cargo/: config.toml
.config/: nextest.toml
.fabro/workflows/implement-work-item/: workflow.toml
.github/workflows/: ci.yml  release-binary.yml  release-please.yml
SPECIFICATION/: README.md  constraints.md  contracts.md  scenarios.md  spec.md
SPECIFICATION/history/v001/: README.md  constraints.md  contracts.md  non-functional-requirements.md
SPECIFICATION/history/v002/: contracts.md  non-functional-requirements.md  scenarios.md
SPECIFICATION/history/v003/: spec.md
SPECIFICATION/history/v004/: non-functional-requirements.md
SPECIFICATION/history/v006/: contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/history/v008/: non-functional-requirements.md  spec.md
SPECIFICATION/history/v009/: contracts.md  non-functional-requirements.md  scenarios.md
SPECIFICATION/history/v010/: contracts.md  spec.md
SPECIFICATION/history/v012/: contracts.md  scenarios.md
SPECIFICATION/history/v013/: constraints.md  contracts.md  non-functional-requirements.md  scenarios.md  spec.md
SPECIFICATION/history/v014/: contracts.md  non-functional-requirements.md  scenarios.md  spec.md
SPECIFICATION/history/v015/: constraints.md  contracts.md  scenarios.md  spec.md
SPECIFICATION/history/v016/: contracts.md  scenarios.md  spec.md
SPECIFICATION/history/v017/: contracts.md  scenarios.md  spec.md
SPECIFICATION/history/v018/: contracts.md  spec.md
SPECIFICATION/history/v019/: contracts.md  scenarios.md
SPECIFICATION/history/v020/: contracts.md
SPECIFICATION/history/v021/: constraints.md  contracts.md  scenarios.md
SPECIFICATION/history/v022/: contracts.md  scenarios.md
SPECIFICATION/history/v023/: contracts.md  scenarios.md
SPECIFICATION/history/v024/: contracts.md  scenarios.md
SPECIFICATION/history/v025/: contracts.md  scenarios.md
SPECIFICATION/history/v026/: contracts.md  scenarios.md  spec.md
SPECIFICATION/history/v027/: constraints.md  contracts.md  scenarios.md
SPECIFICATION/history/v028/: contracts.md  scenarios.md
SPECIFICATION/history/v029/: contracts.md  scenarios.md
SPECIFICATION/history/v030/: contracts.md  non-functional-requirements.md  scenarios.md
SPECIFICATION/history/v032/: contracts.md
SPECIFICATION/history/v033/: scenarios.md  spec.md
SPECIFICATION/history/v034/: contracts.md  scenarios.md
SPECIFICATION/history/v035/: contracts.md
SPECIFICATION/history/v036/: scenarios.md
SPECIFICATION/proposed_changes/: README.md  b1-source-availability-honesty.md  b6-settings-doc-anchor-and-boundary-widening.md  command-queue-exactly-once-consumption.md  console-cruft-cleanup.md  console-dispatcher-settings-rebaseline.md  nfr-contributor-scenarios.md  operator-status-move-surface.md  panes-no-doc-prose.md  settings-doc-is-readme.md  status-line-context-hints.md  top-pane-focus-hscroll.md  tui-pane-specific-modal-help.md  user-docs-tree.md  work-item-record-drill-in.md
crates/console-application/: Cargo.toml
crates/console-application/src/: lib.rs  source_adapters.rs
crates/console-arch-check/: Cargo.toml
crates/console-arch-check/src/: main.rs
crates/console-cli/: Cargo.toml
crates/console-cli/src/: backing_cli.rs  lib.rs  main.rs
crates/console-cli/tests/: docs_enter_key_lockstep.rs  docs_release_asset_lockstep.rs  docs_release_version_lockstep.rs  docs_status_hint_lockstep.rs  finding_e_python_exec.rs  scenario_10_autonomous_run.rs  scenario_11_approve_valve.rs  scenario_11_reject_valve.rs  scenario_11_set_admission.rs  scenario_12_needs_attention_diff.rs  scenario_15_orchestrator_auto_dispositions.rs  scenario_6_policy_rejected_drain.rs  scenario_7_crash_gap.rs  scenario_9_autonomous_mode.rs  scenario_9_dispatcher_setting.rs  scenarios_2_3_4_5_8_operator_acceptance.rs  tmux_tui_e2e.rs
crates/console-cli/tests/fixtures/: orchestrator-auto-disposition-journal.jsonl
crates/console-cli/tests/support/: attention_rows.rs  lifecycle.rs  mod.rs
crates/console-completeness-check/: Cargo.toml
crates/console-completeness-check/src/: lib.rs  main.rs
crates/console-completeness-check/tests/: scenario_22_user_docs_tree.rs
crates/console-domain/: Cargo.toml
crates/console-domain/src/: lib.rs
crates/console-eventstore/: Cargo.toml
crates/console-eventstore/src/: lib.rs
crates/console-spec-check/: Cargo.toml
crates/console-spec-check/src/: lib.rs  main.rs  tests.rs
crates/console-spec-check/tests/data/: parity_fixture.md  parity_golden.json
crates/console-tui/: Cargo.toml
crates/console-tui/src/: lib.rs
dev-tooling/: ensure-rust-quality-tools.sh  git-hook-wrapper.sh  worktree-hydrate.sh
docs/: README.md  cli-options.md  detailed-usage.md  factory-confirmations.md  installing.md  lifecycle-walkthrough.md  overview-quickstart.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: event_envelope.rs
plan/autonomous-mode/: design.md  handoff.md
plan/cockpit-ux-docs-release/: handoff.md
plan/command-queue-semantics/: handoff.md
plan/console-autonomous-mode/: design.md
plan/console-cruft-cleanup/: handoff.md
plan/console-happy-path-mvp/: handoff.md
plan/event-identity-integrity/: handoff.md
plan/impl-dispatch/: handoff.md  live-adversarial-review-prompt.md
plan/operator-surface-redesign/: handoff.md
plan/repo-invariant-guards/: handoff.md
plan/test-adequacy-gates/: handoff.md
plan/work-item-lifecycle-redesign/: README.md  handoff.md
prompts/: console-fleet-wiring-prompt.md  impl-cleanup-handoff.md  impl-obligations-handoff.md  spec-refinement-critique-handoff.md  tui-first-milestone-handoff.md  worktree-discipline-sidecar.md
research/: tui-first-milestone-bootstrap-plan.md
tests/: heading-coverage.json
tests/fixtures/: orchestrator-config-manifest.json
(+91 files in other folders)
