[workspace]
members = [
  "crates/console-application",
  "crates/console-arch-check",
  "crates/console-cli",
  "crates/console-domain",
  "crates/console-eventstore",
  "crates/console-tui",
]
exclude = [
  "fuzz",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/thewoolleyman/livespec-console-beads-fabro"
rust-version = "1.92"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
expect_used = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
