[package]
name = "livespec-console-beads-fabro-fuzz"
edition = "2024"
publish = false
version = "0.0.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
console-application = { path = "../crates/console-application" }
console-domain = { path = "../crates/console-domain" }
libfuzzer-sys = "0.4"

[[bin]]
name = "event_envelope"
path = "fuzz_targets/event_envelope.rs"
test = false
doc = false
bench = false
