[package]
name = "console-application"
description = "Application use cases and projections for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
console-domain = { path = "../console-domain", version = "0.1.0" }

[dev-dependencies]
proptest = "1.6.0"

[lints]
workspace = true
