[package]
name = "console-application"
description = "Application use cases and projections for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
# Internal application crate — never published; enables cargo-deny's
# allow-wildcard-paths for the versionless internal path dep below.
publish = false

[dependencies]
console-domain = { path = "../console-domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
proptest = "1.6.0"

[lints]
workspace = true
