[package]
name = "console-arch-check"
description = "Architecture checks for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
cargo_metadata = "0.23.1"
syn = { version = "2.0.118", features = ["full", "visit"] }

[lints]
workspace = true
