[package]
name = "livespec-console-beads-fabro"
description = "TUI-first operator console for LiveSpec Beads/Fabro factory work"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
console-application = { path = "../console-application", version = "0.1.0" }
console-domain = { path = "../console-domain", version = "0.1.0" }

[lints]
workspace = true
