[package]
name = "console-domain"
description = "Domain events, commands, IDs, and errors for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dev-dependencies]
proptest = "1.6.0"

[lints]
workspace = true
