[package]
name = "console-eventstore"
description = "SQLite event-store adapter for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
# Internal application crate — never published; enables cargo-deny's
# allow-wildcard-paths for the versionless internal path deps below.
publish = false

[dependencies]
console-domain = { path = "../console-domain" }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[dev-dependencies]
console-application = { path = "../console-application" }

[lints]
workspace = true
