[package]
name = "console-tui"
description = "Terminal UI rendering adapter for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
console-application = { path = "../console-application", version = "0.1.0" }
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["std"] }

[dev-dependencies]
console-domain = { path = "../console-domain", version = "0.1.0" }

[lints]
workspace = true
