[package]
name = "console-tui"
description = "Terminal UI rendering adapter for livespec-console-beads-fabro"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
# Internal application crate — never published; enables cargo-deny's
# allow-wildcard-paths for the versionless internal path deps below.
publish = false

[dependencies]
console-application = { path = "../console-application" }
console-domain = { path = "../console-domain" }
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = [
  "crossterm_0_29",
  "std",
  # `Paragraph::line_count` (used to size the Detail-pane scroll clamp and
  # scrollbar against the wrapped row count) is gated behind this feature.
  "unstable-rendered-line-info",
] }

[lints]
workspace = true
